--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
     "test": "spago -x ./test.dhall test"
   },
   "devDependencies": {
-    "spago": "^0.20.3",
-    "purescript": "^0.14.3",
-    "purescript-psa": "^0.5.1",
-    "webpack": "^3.6.0"
+    "spago": "^0.20.9",
+    "purescript": "^0.15.0",
+    "purescript-psa": "^0.5.1"
   }
 }
